<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        yourapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new"
        yourapp:showAsAction="never"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit"
        yourapp:showAsAction="never"/>
    <item
        android:id="@+id/action_discard"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_discard"
        yourapp:showAsAction="never"/>

</menu>