<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout style="@style/Form" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_educational_content_manager"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View style="@style/Separator" />

        <RadioGroup
            android:id="@+id/radio_group_multimedia_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/prompt_text" />
			<RadioButton
                android:id="@+id/radio_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_image" />
            <RadioButton
                android:id="@+id/radio_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_video" />
        </RadioGroup>
        
        <EditText
            android:id="@+id/educational_content_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_title"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/educational_content_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/educational_content_footnote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_footnote"
            android:maxLines="1"
            android:singleLine="true" />
        
        <TextView
            android:id="@+id/educational_content_label_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="12dp"
            android:paddingTop="10dp"
            android:text="@string/prompt_page"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <SeekBar
            android:id="@+id/educational_content_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/action_save" />
    </LinearLayout>

</ScrollView>