<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout style="@style/Form" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_discipline_manager"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View style="@style/Separator" />
        
        <EditText
            android:id="@+id/discipline_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:maxLines="1"
            android:singleLine="true" />
		
        <EditText
            android:id="@+id/discipline_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_description"
            android:maxLines="4"
            android:singleLine="false" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/action_save" />
        
    </LinearLayout>

</ScrollView>