<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout style="@style/Form" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_mspl"
            android:gravity="center"
            android:text="@string/action_sign_in_register" />

        <View style="@style/Separator" />

        <Button
            android:id="@+id/button_facebook"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_facebook"
            android:gravity="center"
            android:text="@string/action_facebook" />

        <Button
            android:id="@+id/button_twitter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_twitter"
            android:gravity="center"
            android:text="@string/action_twitter" />

    </LinearLayout>

</ScrollView>