<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout style="@style/Form" >

        <Button
            android:id="@+id/button_manage_view_educational_content"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/button_access_requests"
            android:text="@string/action_access_requests"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/button_edit_profile"
            android:text="@string/action_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/button_info"
            android:text="@string/action_info"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center" />
    </LinearLayout>

</ScrollView>