<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp" >

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_mspl"
            android:gravity="center"
            android:text="@string/action_sign_in_register" />

        <View style="@style/Separator" />

        <Button
            android:id="@+id/btnLogInFacebook"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_facebook"
            android:gravity="center"
            android:text="@string/action_facebook" />

        <Button
            android:id="@+id/btnLogInTwitter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_twitter"
            android:gravity="center"
            android:text="@string/action_twitter" />

    </LinearLayout>

</ScrollView>